--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <input id="photo" type="file">
     <div id = "results"></div>
-    <scipt>
+    <script>
         async function loader(reader){
             const response = await fetch('https://wsharpe-minimal.hf.space/predict/', {
                 method: 'POST',
@@ -21,7 +21,7 @@
             });
             const json = await response.json();
             const label = json['data'][0]['confidences'][0]['label'];
-            results.innerHTML = <br/><img src="${reader.result}" width="300px" height="300px"><br/>${label}<br/>;
+            results.innerHTML = '<br/><img src="${reader.result}" width="300px" height="300px"><p>${label}</p>'
         }
         function read(){
             const reader = new FileReader();
