--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <input id="photo" type="file">
     <div id = "results"></div>
     <script>
-        async function loader(reader){
-            const response = await fetch('https://wsharpe-minimal.hf.space/predict/', {
+        async function loaded(reader){
+            const response = await fetch('https://wsharpe-minimal.hf.space/+/api/predict/', {
                 method: 'POST',
                 headers: {
                     'Content-Type': 'application/json'
@@ -26,7 +26,7 @@
         function read(){
             const reader = new FileReader();
             reader.addEventListener('load', () => {
-                loader(reader);
+                loaded(reader);
             });
             reader.readAsDataURL(photo.files[0]);
         }
