--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div id = "results"></div>
     <script>
         async function loaded(reader){
-            const response = await fetch('https://wsharpe-minimal.hf.space/+/api/predict/', {
+            const response = await fetch('https://wsharpe-minimal.hf.space/api/predict/', {
                 method: 'POST',
                 headers: {
                     'Content-Type': 'application/json'
